[gd_scene load_steps=3 format=3 uid="uid://dnv0vhp5xfvvy"]

[ext_resource type="Script" path="res://autoload/iirose/demo/message_sent.gd" id="1_48lef"]
[ext_resource type="PackedScene" uid="uid://dlwq4kmdb3bhs" path="res://addons/easy_charts/control_charts/chart.tscn" id="2_fb1vt"]

[node name="PopupPanel" type="PopupPanel"]
size = Vector2i(500, 300)
visible = true
script = ExtResource("1_48lef")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 4

[node name="房间" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/房间"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="Control/TabContainer/房间/VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0

[node name="Button" type="Button" parent="Control/TabContainer/房间/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "发送"

[node name="弹幕" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/弹幕"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="Control/TabContainer/弹幕/VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0

[node name="Button" type="Button" parent="Control/TabContainer/弹幕/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "发送"

[node name="私聊" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/私聊"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TabContainer/私聊/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/TabContainer/私聊/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "id："
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="LineEdit" parent="Control/TabContainer/私聊/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="TextEdit" type="TextEdit" parent="Control/TabContainer/私聊/VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0

[node name="Button" type="Button" parent="Control/TabContainer/私聊/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "发送"

[node name="股票" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/股票"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Chart1" parent="Control/TabContainer/股票/VBoxContainer" instance=ExtResource("2_fb1vt")]
layout_mode = 2
size_flags_horizontal = 1

[node name="Chart2" parent="Control/TabContainer/股票/VBoxContainer" instance=ExtResource("2_fb1vt")]
layout_mode = 2
size_flags_horizontal = 1

[node name="Chart3" parent="Control/TabContainer/股票/VBoxContainer" instance=ExtResource("2_fb1vt")]
layout_mode = 2

[node name="指令" type="Control" parent="Control/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/指令"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="Control/TabContainer/指令/VBoxContainer"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0

[node name="cmd" type="Button" parent="Control/TabContainer/指令/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "发送"

[connection signal="tab_changed" from="Control/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="Control/TabContainer/房间/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/TabContainer/弹幕/VBoxContainer/Button" to="." method="_on_bullet_pressed"]
[connection signal="pressed" from="Control/TabContainer/私聊/VBoxContainer/Button" to="." method="_on_side_pressed"]
[connection signal="pressed" from="Control/TabContainer/指令/VBoxContainer/cmd" to="." method="_on_cmd_pressed"]
